--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,9 @@ jobs:
       - name: pruebas+coverage
         id: pruebas
         run: |
-          pipenv run pytest --cov=src
-          pipenv run coverage xml -o coverage-reports/coverage.xml
+          mkdir -p coverage-reports
+          pipenv run pytest --cov=. --cov-report xml:coverage-reports/coverage.xml
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
