--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,19 +13,21 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
           python-version: "3.9"
+
       - name: Instalación de librerías y dependencias
         run: |
           python -m pip install --upgrade pip
           pip install pipenv && pipenv install --deploy --ignore-pipfile
+
       - name: pruebas+coverage
         id: pruebas
         run: |
-          mkdir -p coverage-reports
-          pipenv run pytest --cov=src --cov-report xml:coverage-reports/coverage.xml
+          pipenv run pytest --cov=src --cov-report xml:coverage.xml
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
