--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=J1Sebastian_metricas-blacklists
 sonar.organization=j1sebastian
 sonar.coverage.exclusions=**tests/**
+sonar.python.coverage.reportPaths=coverage.xml
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=metricas-blacklists
